[FIX] web: o_content: correctly reset overflow and height

--- a/web/static/src/less/webclient_layout.less
+++ b/web/static/src/less/webclient_layout.less
@@ -29,6 +29,8 @@ html {
             position: relative;  // Allow to redistribute the 100% height to its child
             @media (max-width: @screen-xs-max) {
                 position: static;  // reset the height 100% distribution on flex item
+                overflow: visible;
+                height: auto;
             }
 
             .o_view_manager_content {
